--- a/QaLegendProject/pom.xml
+++ b/QaLegendProject/pom.xml
@@ -147,7 +147,7 @@
     <configuration>
     <testFailureIgnore>true</testFailureIgnore>
      <suiteXmlFiles> 
-       <suiteXmlFile>testng.xml</suiteXmlFile>
+       <suiteXmlFile>jenkins.xml</suiteXmlFile>
         </suiteXmlFiles>
       </configuration>
 		</plugin>
@@ -173,7 +173,7 @@
       <configuration>
        <testFailureIgnore>true</testFailureIgnore>
        <suiteXmlFiles>
-  <suiteXmlFile>testng.xml</suiteXmlFile>
+  <suiteXmlFile>jenkins.xml</suiteXmlFile>
         </suiteXmlFiles>
         </configuration>
 		</plugin>
